# Sek_Slam

./: README.md
amcl/: CMakeLists.txt  boost_readme.txt
amcl/include/amcl/sensors/: amcl_laser.h
amcl/src/: amcl_node.cpp
amcl/src/amcl/sensors/: amcl_laser.cpp
eclipse_workspace/RoboSkel/: .project  project.properties
eclipse_workspace/RoboSkel/res/layout/: activity_circle_control.xml  activity_display_map.xml  activity_loading.xml  activity_main.xml  activity_manual_control.xml  activity_sensor_control.xml  activity_simple_sensor.xml  fragment_circle_control_dummy.xml  fragment_display_map_dummy.xml  fragment_manual_control_dummy.xml  fragment_sensor_control_dummy.xml  fragment_simple_sensor_dummy.xml
eclipse_workspace/RoboSkel/res/menu/: circle_control.xml  display_map.xml  manual_control.xml  sensor_control.xml
eclipse_workspace/RoboSkel/res/values/: strings.xml
eclipse_workspace/RoboSkel/src/com/camera/simplemjpeg/: MjpegView.java
eclipse_workspace/RoboSkel/src/com/example/roboskel/: ActiveConnection.java  CircleControl.java  DisplayMap.java  LoadingActivity.java  Main.java  ManualControl.java  SensorControl.java  SimpleSensor.java
eclipse_workspace/RoboSkel/src/com/example/touch/: TouchImageView.java
eclipse_workspace/RoboSkel/src/connectionProtocol/: ConnParameters.java  Connection.java  Quaternion.java
imu_chr_6d/: CMakeLists.txt  package.xml
imu_chr_6d/scripts/: chr_6d.py  chr_6d_const.py  chr_6d_node.py
laser_scan_matcher/: CMakeLists.txt  package.xml
laser_scan_matcher/include/laser_scan_matcher/: laser_scan_matcher_nodelet.h  laser_scan_matcher_odom.h
laser_scan_matcher/src/: laser_scan_matcher.cpp  laser_scan_matcher_node.cpp  laser_scan_matcher_odom.cpp
robot_server/: CMakeLists.txt  package.xml
robot_server/include/: manualControl.py  messageHandler.py
robot_server/msg/: chatter_2.msg
robot_server/scripts/: client  manualControlBU.py  mapInfo.py  mastRotation.py  messageHandler.py  messageHandler.py~  roberto.py  robotserver.py  robotserver.py~  robotserver2.py  robotserverBl.py  sensorControl.py  sensorControl.py~
robot_server/scripts/scripts/: BluetoothTest.py  manualControl.py  messageHandler.py  messageHandler.py~  robotserver  robotserver.py  robotserver.py~  robotserverBl.py  sensorControl.py
robot_server/src/: setup.py
sek_drive/: CMakeLists.txt  iit2.yaml  package.xml
sek_drive/backup_files/: amcl_diff.launch  mymap_blocked.yaml
sek_drive/camera_info/: depth_A00366A20514042A.yaml  rgb_A00366A20514042A.yaml
sek_drive/include/sdc2130_skel/: RoboteqDevice.h
sek_drive/include/sdc2130_skel/.svn/: all-wcprops  entries
sek_drive/launch/: align.launch  amcl2.launch  amcl_lsm.launch  base_local_planner_params.yaml  costmap_common_params.yaml  drive.launch  drive_key.launch  global_costmap_params.yaml  gs_nav.launch  hektor_nav.launch  hok_tf.launch  kinect_calibrate.launch  local_costmap_params.yaml  lsm.launch  map.launch  mast_kinect.launch  odom_from_enc.launch  pcl_to_scan.launch  record.launch  record_hok_odom.launch  sek_config.launch  sek_config2.launch  sek_kinect.launch  sek_map.launch  sek_nav.launch  sek_nav_amcl.launch  sek_nav_hec.launch  urg.launch  vel_logger.launch
sek_drive/launch/launch/: base_local_planner_params.yaml  costmap_common_params.yaml  dep.launch  drive_key.launch  local_costmap_params.yaml  lsm.launch  rgb.launch  sek_map.launch  sek_nav.launch  vel_logger.launch
sek_drive/scripts/: action_client.py  big_mock.py  client_to_valve.py  mock_client.py  mock_client_2.py  mock_client_3.py  mock_server.py  prox_flex_sek.py  py_client.py
sek_drive/src/: align.cpp  drive_base.cpp  drive_base_2.cpp  grafeio.yaml  image_server.cpp  init_pose.cpp  map_pose.cpp  odom_from_enc.cpp  odom_transformer.cpp  path_sender.cpp  planner.cpp  record_hok_odom.cpp  robodev.cpp  sek_controller.cpp  stream_merge.cpp  test_align.cpp  test_motors.cpp  vel_logger.cpp
sek_drive/src/sdc2130_skel/msg/: _odom_msg.py
sek_drive/src/sdc2130_skel/msg/.svn/: entries
sek_drive/src/src/: RoboteqDevice.cpp  drive_base.cpp  drive_base_2.cpp  drive_base_backup_2.cpp  speaker.cpp  vel_logger.cpp
sek_drive/src/src/sdc2130_skel/.svn/: entries
sek_drive/src/src/sdc2130_skel/msg/: __init__.py  _teleop_skel.py
servo_mast/: CMakeLists.txt  package.xml
servo_mast/msg/: mast_position.msg  mast_turn.msg
servo_mast/msg_gen/cpp/include/servo_mast/: mast_position.h  mast_turn.h
servo_mast/msg_gen/lisp/: _package.lisp  _package_mast_position.lisp  _package_mast_turn.lisp  mast_position.lisp  mast_turn.lisp  servo_mast-msg.asd
servo_mast/src/: main.cpp
servo_mast/src/servo_mast/msg/: __init__.py  _mast_position.py  _mast_turn.py
